--- a/form-builder/styles.css
+++ b/form-builder/styles.css
@@ -1,11 +1,24 @@
 body {
-    width: 500px;
+    width: 800px;
     margin: 0 auto;
-    border: 1px solid black;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .formContainer {
-    
+    border: 1px solid black;
+}
+
+.formHeader {
+    width: 100%;
+    background-color: #5C8AC7;
+    padding: .5rem 0;
+}
+
+.formHeader h1 {
+    color: white;
+    font-weight: lighter;
+    font-size: 2rem;
+    margin-left: 1rem;
 }
 
 .formContent {
@@ -13,6 +26,7 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    margin: 1rem 0;
 }
 
 .formContent input, select, textarea {
@@ -20,17 +34,21 @@ body {
     margin: 1rem 0;
 }
 
-.formHeader {
-    width: 100%;
-    background-color: #5C8AC7;
-}
-
-.formHeader h1 {
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
+.formContent input {
+    padding: .5rem;
 }
 
 .formFooter {
     width: 100%;
     background-color: #CDDDEF;
+    padding: 1rem 0;
+}
+
+.formFooter button {
+    margin-left: 1rem;
+    padding: 1rem;
+    background-color: #5C8AC7;
+    border: none;
+    border-radius: 5%;
+    color: white;
 }
